modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/Makefile.Debug 	modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/Makefile.Release 	modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/debug/data.o 	modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/debug/file.o 	modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/debug/find.o 	modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/debug/findWindow.o 	modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/debug/language.o 	modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/debug/mainwindow.o 	modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/debug/moc_find.o 	modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/debug/moc_mainwindow.o 	modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/debug/moc_table.o 	modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/debug/pr-products.exe 	modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/debug/qrc_translations.cpp 	modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/debug/qrc_translations.o 	modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/debug/row.o 	modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/debug/table.o 	modified:   build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/ui_find.h 	modified:   data.cpp 	modified:   data.hpp 	modified:   find.cpp 	modified:   find.h 	modified:   find.ui 	modified:   findWindow.cpp 	modified:   mainwindow.cpp 	modified:   mainwindow.h 	modified:   translations/my_en_US.ts 	modified:   translations/my_ru_RU.qm 	modified:   translations/my_ru_RU.ts

--- a/find.ui
+++ b/find.ui
@@ -86,56 +86,9 @@
            <pointsize>28</pointsize>
           </font>
          </property>
-         <item>
-          <property name="text">
-           <string>Any</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>ID</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Name</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Type</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Mark</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Length</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Width</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Weight</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Fittings</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Date</string>
-          </property>
-         </item>
+         <property name="insertPolicy">
+          <enum>QComboBox::InsertPolicy::InsertAtBottom</enum>
+         </property>
         </widget>
        </item>
       </layout>
